隐藏用户手机号

--- a/online-web/src/main/webapp/web/html/video.html
+++ b/online-web/src/main/webapp/web/html/video.html
@@ -387,7 +387,7 @@
 				'</div></div>' + '<div class="cymylogin-bottom form-login">' +
 				'<input type="text" class="cyinput1 form-control" autocomplete="off" maxlength="30" placeholder="请输入手机号"/>' +
 				'<div class="cymyloginclose1"></div>' +
-				'<input type="password" class="cyinput2 form-control" maxlength="18" placeholder="请输入6-18位密码"/>' +
+				'<input type="password" class="cyinput2 form-control" maxlength="18" placeholder="请输入6-18位密码" autocomplete="new-password" />' +
 				'<div class="cymyloginclose2"></div>' +
 				'<button class="cymyloginbutton">登<em></em>录</button>' +
 				'<div class="cymyloginpassword">' +
