点击跳转，招生列表。地址修改提示--我的

--- a/wechat/src/main/webapp/xcview/html/edit_address.html
+++ b/wechat/src/main/webapp/xcview/html/edit_address.html
@@ -28,6 +28,12 @@
 	    }
 	}	
 </script>
+<style>
+	.web_toasts{
+		left: 50%;
+		margin-left: -2.1rem;
+	}
+</style>
 <link rel="stylesheet" href="/xcview/css/css.css">
 <link rel="stylesheet" href="/xcview/css/tailor.css">
 <link rel="stylesheet" href="/xcview/css/personCommon.css">
