--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -1039,7 +1039,7 @@
 		<div class="prose_origin_main">
 			<script type="text/html" id="prose_origin_main_id">
 			{{each items as item i}} 
-			<div class="prose_origin_details" data-ids="{{item.id}}"  data-tokenStr="{{item.tokenStr}}">
+			<div class="prose_origin_details" data-ids="{{item.id}}">
 				<div class="prose_origin_details_center">
 					<img src="{{item.coverImg}}" alt="" />
 					<div class="prose_origin_main_fize">
