跟师直播课程-联调，修改密码提示

--- a/wechat/src/main/webapp/xcview/html/amend.html
+++ b/wechat/src/main/webapp/xcview/html/amend.html
@@ -25,7 +25,12 @@
 	    }
 	}	
 </script>
-
+<style>
+	.web_toasts{
+		left: 50% !important;
+		margin-left: -2.9rem !important;
+	}
+</style>
 </head>
 <body style="background:#fff;">
 	<!-- 头部开始 -->
