修改警告表述 原价不能小于当前价格

--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -1395,7 +1395,7 @@
 								<span class="comment-left-tip">原价</span>
 								<input class="zhuanlan_title zhuanlan_title3 course_originalCost " onkeyup="this.value=this.value.replace(/\D/g,'')" onafterpaste="this.value=this.value.replace(/\D/g,'')">
 								<span>熊猫币</span>
-								<p class="warning warning_course_originalCost hide">原价不能大于当前价格</p>
+								<p class="warning warning_course_originalCost hide">原价不能小于当前价格</p>
 							</div>
 							<!--课程介绍-->
 							<div class="comment-style">
