完善下专辑新增课程前端部分

--- a/online-web/src/main/webapp/web/html/anchor/curriculum.html
+++ b/online-web/src/main/webapp/web/html/anchor/curriculum.html
@@ -626,7 +626,7 @@
 				</optgroup>
 			</select>
 			<button type="button" onclick="quicklyAddAlbumCourse()" class="sure-add sure-add-caiId" >确认添加</button>
-			<p class="nofind-class">没有找到课程，新增课程</p>
+			         <p class="nofind-class">没有找到课程，可以新增课程</p>
 		</div>
 	</div>
 
