修改搜索框文案

--- a/online-web/src/main/webapp/web/html/school/curriculum-list.html
+++ b/online-web/src/main/webapp/web/html/school/curriculum-list.html
@@ -82,7 +82,7 @@
 								<dt>筛选条件 :</dt>
 							</dl>
 							<p class="author-search z">
-								<input type="text" id="search-text" value="" placeholder="如：朱小宝" />
+								<input type="text" id="search-text" value="" placeholder="如：针灸" />
 								<button type="button"></button>
 							</p>
 						</li>
