--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -1074,7 +1074,7 @@
 			</div>
 			<div class="subscribe">
 				<div class="subscribe_time">6月23日  星期四  9:00-10:30</div>
-				<div class="subscribe_btn" onclick="location.href ='/xcview/html/physician/reserve_information.html'">预约</div>
+				<div class="subscribe_btn" onclick="location.href ='/xcview/html/physician/reserve_information.html?doctor='+doctorId">预约</div>
 				<div class="subscribe_btns" style="display: none;">已预约</div>
 			</div>
 			<div class="subscribe">
@@ -1104,7 +1104,15 @@
 					<script type="text/html" id="teacher_hide_id">
 					{{each items as item i}}			
 						<li style="position: relative;">
-					        <a style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; z-index: 999;"></a>
+
+							<!--if (data.resultObject.onlineApprenticeStatus == 4) {
+				                <a style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; z-index: 999;" onclick="common_jump_all({{item.id}})"></a>
+				            }else{
+				                <a style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; z-index: 999;" onclick="common_jump_all({{item.id}})"></a>
+				            }-->
+					        
+					       <a style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; z-index: 999;" onclick="common_jump_all({{item.id}})"></a> 
+
 							<p class="wrap_img_pic">
 								<img src="{{item.smallImgPath}}" /> 
 								<img src="/xcview/images/Sinatv_auto.png" alt="" class="img_little">
