删除弹框控制整体样式。打开点击预约按钮。删除开始显示预约成功提示

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -1080,7 +1080,7 @@
 					{{if item.appointed == true}}
 						<div class="subscribe_btns">已预约</div>
 					{{else}}
-						<div class="subscribe_btn">预约</div>
+						<div class="subscribe_btn" onclick="location.href ='/xcview/html/physician/reserve_information.html?doctor='+doctorId">预约</div>
 
 						<!--<div class="subscribe_btn" onclick="location.href ='/xcview/html/physician/reserve_information.html?doctor='+doctorId">预约</div>-->
 					{{/if}}
