--- a/wechat/src/main/webapp/xcview/html/physician/reserve_information.html
+++ b/wechat/src/main/webapp/xcview/html/physician/reserve_information.html
@@ -102,7 +102,7 @@
 	</div>
 
 	<!-- 点击申请成功 -->
-	<div class="prosperity_popout" style="display: block !important;">
+	<div class="prosperity_popout">
 		<div class="prosperity_popout_bg"></div>
 		<div class="prosperity_popout_main">
 			<div class="prosperity_popout_title">
