--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -109,18 +109,18 @@
 			<td>
 				{{if course.applyStatus==1}}
 				{{if course.status==1}}
-				<a href="javascript:;" onclick="confirmCourseSale(0,{{course.id}},{{course.courseId}})">下架</a>
+				<a href="javascript:;" onclick="confirmCourseSale(0,{{course.id}},{{course.courseId}})" style="margin: 0 20px;">下架</a>
 				<a href="javascript:;" onclick="openSelectPupil({{course.courseId}})">选择弟子</a>
 				{{else}}
 				<a href="javascript:;" onclick="confirmCourseSale(1,{{course.id}},{{course.courseId}})">上架</a>
+				<a href="javascript:;" onclick="editCourse({{course.id}},true)" style="margin: 0 20px;">编辑</a>
 				<a href="javascript:;" onclick="openSelectPupil({{course.courseId}})">选择弟子</a>
-				<a href="javascript:;" onclick="editCourse({{course.id}},true)">编辑</a>
 				{{/if}}
 				{{else if course.applyStatus==2}}
-				<a href="javascript:;" onclick="editCourse({{course.id}},false)">编辑</a>
+				<a href="javascript:;" onclick="editCourse({{course.id}},false)" style="margin: 0 20px;">编辑</a>
 				<a href="javascript:;" onclick="deleteCourse({{course.id}})">删除</a>
 				{{else if course.applyStatus==0}}
-				<a href="javascript:;" onclick="editCourse({{course.id}},false)">编辑</a>
+				<a href="javascript:;" onclick="editCourse({{course.id}},false)" style="margin: 0 20px;">编辑</a>
 				<a href="javascript:;" onclick="deleteCourse({{course.id}})">删除</a>
 				{{/if}}
 			</td>
