--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -465,11 +465,13 @@
 				<div class="message_name">
 					<div class="name">{{items.lecturerInfo.name}}</div>
 					<div class="name" style="font-size: 0.24rem;color: #999999;margin-top: 0.06rem;">{{items.lecturerInfo.title}}</div>
+					{{if items.apprentice}}
 					<div class="message_characteristic">我的师傅</div>
+					{{/if}}
 					<div class="both"></div>
 				</div>
 				<div class="message_face">
-					<span class="disciple"><span class="disciple_fize">弟子</span><span style="margin-top: 0.015rem;">4</span></span>
+					<span class="disciple"><span class="disciple_fize">弟子</span><span style="margin-top: 0.015rem;">{{items.apprenticeCount}}</span></span>
 					{{if items.followHidden == false}}
 					<div class="fans" style="float:left;"><div class="fans_size">粉丝</div><div id="fansCount">{{items.fansCount}}</div></div>
 					{{/if}}
