--- a/wechat/src/main/webapp/xcview/html/physician/index.html
+++ b/wechat/src/main/webapp/xcview/html/physician/index.html
@@ -90,7 +90,9 @@
 	</header>
 	<div class="opacity_height"></div>
 	<!-- 头部轮播开始 -->
-	<div class="banner_img">
+
+	<!-- <div class="banner_img">
+		
 		<div class="swiper-container top_swiper" onclick="location.href ='broadcastRoom.html'">
 			<div class="swiper-wrapper">
 				<div class="swiper-slide ">
@@ -105,7 +107,38 @@
 			</div>
 			<div class="swiper-pagination"></div>
 		</div>
+	</div> -->
+	
+	<!-- <div class="banner_img">
+		<script type="text/html" id="top_details">
+		头部结束
+		<div class="swiper-container top_swiper">
+			<div class="swiper-wrapper">
+				{{each items as item i}}
+				<div class="swiper-slide pic01" onclick="sowingDetails('{{item.url}}')">
+					<img src="{{item.imgPath}}" alt="" />
+				</div>
+				{{/each}}
+			</div>
+			<div class="swiper-pagination"></div>
+		</div>
+		轮播结束
+	
+		</script>
+	</div> -->
+
+	<!--swiper轮播图滑动-->
+	<div class="swiper-container swiper-container-box" id="swiper-container-box" style="">
+	    <div class="swiper-wrapper" id="wrapper-box">
+	     
+	    </div>
+	    <div class="swiper-pagination swiper-banner-list" id="swiper-banner-list"></div>
 	</div>
+	<!--swiper轮播图滑动结束-->
+
+
+
+
 	<!-- 头部轮播结束 -->
 	
 	<!--头部搜索结束-->
