师承弟子数--改用字段

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -1300,7 +1300,11 @@
 		<div class="disciple_details">
 			<div class="disciple_title">
 				<span class="border"></span>
-				<span style="font-size: 0.28rem;">弟子：<span class="disciple_number">0</span>人</span>
+				<span style="font-size: 0.28rem;">弟子：<span class="disciple_number">
+					<script type="text/html" id="disciple_number_id">
+					<span>{{items.apprenticeCount}}</span>
+					</script>
+				</span>人</span>
 				<div class="both"></div>
 			</div>
 			<div class="disciple_main">
